# truecaller-web-api

./: .gitignore  README.md  functional_tests.py  pyproject.toml
config/: settings.py  urls.py
home/: api.py  tests.py  views.py
home/static/css/: base.css
home/templates/: base.html  home.html
home/tests/: test_views.py
