[tool.poetry]
name = "truecaller-web-api"
version = "0.1.0"
description = ""
authors = ["ROHIT RAWAT <rohitrawat2000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"
django = "^2.2"
selenium = "^3.141"

[tool.poetry.dev-dependencies]
pylint = "^2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
